samples/_failures_safe/1761368611_f081b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e75519d.c: In function ‘main’:
./samples/SAFE/__tmp_8e75519d.c:172:16: error: missing terminating " character
  172 |         printf("Failed to create matrix
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8e75519d.c:172:9: error: expected expression at end of input
  172 |         printf("Failed to create matrix
      |         ^~~~~~
./samples/SAFE/__tmp_8e75519d.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e75519d.c:172:9: error: expected declaration or statement at end of input
